--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
-version: '2'
+version: '1'
 
-#NETWORKING#################################################################
-# By default Compose will set up a private network for the cluster #########
-# Each container will join the network and can be reached by other #########
-# containers at a host-name identical to the containres name       #########
-# It's necessary to keep the master container_name as 'master'     #########
+###############################################################################
+#DOCKER-COMPOSE 
+###############################################################################
+# Docker-compose creates a network that. All the other docker images join this networ, forming a cluster #########
+# Network name will same as the parent direcotry name #########
 ############################################################################
+ 
+#---------------------------------------
+# MASTER CONFIGURATION 
+#---------------------------------------
  
 services:
   master:
@@ -15,6 +19,8 @@ services:
     ports:
       - "8080:8080"
     command: ["/usr/bin/supervisord", "--configuration=/opt/conf/master.conf"]
+#---------------------------------------
+# SLAVE CONFIGURATION 
 #---------------------------------------
   slave:
     image: pavanpkulkarni/spark_image_2.0.1:first_image
